# dVN

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.scss
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: api.rs
backend/src/routes/api/: engine.rs  file.rs  mod.rs  render.rs
backend/static/: frontend-47bae8bf30b15ea4.js  frontend-47bae8bf30b15ea4_bg.wasm  frontend-783d015a78294303.js  frontend-783d015a78294303_bg.wasm  frontend-ef64c681a1e37453.js  frontend-ef64c681a1e37453_bg.wasm  index-1f8ffeb19a86667.css  index-f63f9300208e84b3.css  index.html
backend_types/: Cargo.toml
backend_types/src/: engine.rs  error.rs  file.rs  lib.rs  render.rs
derive_directive/: Cargo.toml
derive_directive/src/: errors.rs  lib.rs  parse.rs
derive_directive/tests/: 01-simple-derive.rs  02-parser.rs  03-missing-positional.rs  04-derive-enum.rs  05-verify.rs  06-parsable-opt.rs  progress.rs
directive/: Cargo.toml
directive/src/: errors.rs  lib.rs  parse.rs
directive/tests/: 01-simple-derive.rs  02-parser.rs
directive_errors/: Cargo.toml
directive_errors/src/: lib.rs
examples/: engine.rs
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/src/: app.rs  main.rs  nav.rs  scene_control.rs  text_input.rs
frontend/src/components/: button.rs  editor.rs  file_view.rs  icon_text.rs  loading.rs  logs.rs  mod.rs  nav.rs  play_music.rs  play_sound.rs  preview.rs  scene_control.rs  selection.rs  text_input.rs
frontend/src/routes/: home.rs  mod.rs  play.rs
frontend/src/services/: engine.rs  error.rs  files.rs  mod.rs  render.rs  requests.rs
src/: lib.rs  main.rs
src/core/: engine.rs  mod.rs
src/parser/: config.rs  directives.rs  error.rs  mod.rs  script.rs
src/render/: draw.rs  error.rs  mod.rs  renderer.rs
