[package]
name = "image_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_directive = { path = "derive_directive" }
directive_errors = { path = "directive_errors" }

[workspace]
members = ["derive_directive", "directive_errors"]