[package]
name = "image_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_directive = { path = "derive_directive" }
directive_errors = { path = "directive_errors" }

log = { version = "0.4.14" }
env_logger = "0.9.0"
thiserror = "1.0"
image = "0.24.2"
rusttype = "0.9.2"
imageproc = "0.23.0" 
yew = "0.19.3"
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "console"] }
wasm-bindgen = "0.2"
#stdweb = "0.4.20"
wasm-logger = "0.2.0"
reqwest = { version = "0.11.11"}
#tokio = { version = "1.20", features = ["rt"] }
wasm-bindgen-futures = "0.4.31"
serde = "1.0.139" 
serde_json = "1.0.82" 
[lib]
path = "src/lib.rs"

[workspace]
members = ["derive_directive", "directive_errors", "backend"]