[package]
name = "image_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_directive = { path = "derive_directive" }
directive_errors = { path = "directive_errors" }

log = { version = "0.4.14" }
env_logger = "0.9.0"
thiserror = "1.0"
image = "0.24.2"
rusttype = "0.9.2"
imageproc = "0.23.0" 

[lib]
path = "src/lib.rs"

[workspace]
members = ["derive_directive", "directive_errors", "backend", "frontend"]