[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.139"
serde_json = "1.0.82"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
image_rpg = { path = ".." }