[package]
name = "derive_directive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = { version = "1.0.94", features = ["full", "extra-traits"] }
trybuild = "1.0.61"
thiserror = "1.0"
directive_errors = { path = "../directive_errors" }