[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
yew = "0.19.3"
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent", "HtmlDivElement", "DomTokenList", "console", "Document", "Element"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
reqwest = { version = "0.11.11"}
wasm-bindgen-futures = "0.4.31"
serde = "1.0.139" 
serde_json = "1.0.82" 
regex = "1.6.0"
lazy_static = "1.4.0"
thiserror = "1.0"
yew-hooks = "0.1.56"
gloo = "0.8.0"
gloo-timers = "0.2.4"